[package]
name = "city-pop"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "city-pop"
path = "src/main.rs"

[lib]
name = "city_pop"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
csv = "1.4.0"
memchr = "2.8.0"
memmap2 = "0.9.10"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
unicase = "2.9.0"
